[package]
name = "repo-scan-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "repo_scan_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
git2 = "0.18"
chrono = "0.4"
regex = "1.9"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
path-slash = "0.2"
thiserror = "1.0"
parking_lot = "0.12"
indicatif = "0.17.9"
